<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.SignupOtpActivity">

    <!--    Theme Start-->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/okidzlabsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:drawableTop="@drawable/okidzlabs_logo"
        android:drawablePadding="-32dp"
        android:fontFamily="@font/comic_neue_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/topYellowBackground"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/okidzlabsTextView" />

    <View
        android:id="@+id/bottomYellowBackground"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/yellow"
        app:layout_constraintBottom_toTopOf="@id/bottomOrangeBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/bottomOrangeBackground"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <!--    Theme Ends-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otpInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="56dp"
        android:hint="@string/enter_otp_sent_to_your_login_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topYellowBackground"
        app:layout_constraintVertical_bias="0.2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="6" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/errorInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/please_enter_the_correct_otp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/otpInput" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/resendOTPButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/resend_otp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verifyButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/verifyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/signup_login_button"
        android:fontFamily="@font/roboto_medium"
        android:shadowRadius="@integer/material_motion_duration_long_1"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:elevation="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/otpInput" />

</androidx.constraintlayout.widget.ConstraintLayout>